# zephyr-pigweed

./: .gitignore  .gitmodules  .gn  .pw_ide.yaml  BUILD.gn  BUILDCONFIG.gn  CMakeLists.txt  Kconfig  README.md  RENODE.md  bootstrap.sh  cipd.json  pigweed.json
.github/workflows/: run_renode_tests.yml
app/: CMakeLists.txt  app.robot  prj.conf  testcase.yaml
app/boards/arm64/renode_cortex_a53/: Kconfig.board  Kconfig.defconfig  board.cmake  renode_cortex_a53.dts  renode_cortex_a53.yaml  renode_cortex_a53_defconfig
app/boards/arm64/renode_cortex_a53/support/: cortex_a53.resc
app/include/: hello.h
app/src/: hello.cc  main.cc  test_main.cc
app/test/: CMakeLists.txt  main.cc  test.robot  test_tokenization.cc
boards/antmicro/renode_cortex_a53/: Kconfig.renode_cortex_a53  board.yml  renode_cortex_a53.yaml  renode_cortex_a53_defconfig
boards/arm64/renode_cortex_a53/: Kconfig.board  Kconfig.defconfig  board.cmake  renode_cortex_a53.dts  renode_cortex_a53_defconfig
boards/arm64/renode_cortex_a53/support/: cortex_a53.resc
build_overrides/: pigweed.gni  pigweed_environment.gni
lib/: CMakeLists.txt  Kconfig
lib/include/: hello.h
lib/src/: hello.cc  test_hello.cc  test_track_database.cc
manifest/: west.yml
manifest/zephyr/: module.yml
renode/: cortex_a53.resc  cortex_a53.robot
